# owm-window-manager-c

./: 2  :w  ;  CMakeLists.txt  README.md  input_devices.txt
src/: display.c  display.h  drm_probe.c  dumbfb.c  dumbfb.h  events.c  events.h  fb.c  fb.h  input.c  input.h  main.c  owm.c  owm.h  render.c  render.h  window.c  window.h
src/backend/: backend.c  backend.h
src/backend/linux/: display.c  evdev.c  evdev.h  events.c  linux.c  linux.h  linux_backend.c  linux_backend.h  render.c  render.h
src/backend/linux-platform/: evdev.c  events.h  render.c  render.h
src/backend/wayland/: event.c  event.h  wayland_backend.c  wayland_backend.h
src/core/: cursor.c  cursor.h  event.c  event.h  input.h  window.c  window.h
